syntax = "proto3";

package plugin.v1;

option go_package = "github.com/kalicyh/xiaozhi-flow/api/v1;pluginv1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

// 基础插件服务接口
service PluginService {
  // 获取插件信息
  rpc GetInfo(GetInfoRequest) returns (GetInfoResponse);

  // 初始化插件
  rpc Initialize(InitializeRequest) returns (InitializeResponse);

  // 执行插件功能
  rpc Execute(ExecuteRequest) returns (ExecuteResponse);

  // 获取插件健康状态
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);

  // 获取插件指标
  rpc GetMetrics(GetMetricsRequest) returns (GetMetricsResponse);

  // 关闭插件
  rpc Shutdown(ShutdownRequest) returns (ShutdownResponse);
}

// 语音处理插件接口
service AudioPlugin {
  // 处理音频数据
  rpc ProcessAudio(ProcessAudioRequest) returns (ProcessAudioResponse);

  // 流式音频处理
  rpc StreamProcessAudio(stream StreamProcessAudioRequest) returns (stream StreamProcessAudioResponse);
}

// 大模型插件接口
service LLMPlugin {
  // 生成文本
  rpc GenerateText(GenerateTextRequest) returns (GenerateTextResponse);

  // 流式生成文本
  rpc StreamGenerateText(StreamGenerateTextRequest) returns (stream StreamGenerateTextResponse);

  // 嵌入向量生成
  rpc GenerateEmbedding(GenerateEmbeddingRequest) returns (GenerateEmbeddingResponse);
}

// 设备控制插件接口
service DevicePlugin {
  // 控制设备
  rpc ControlDevice(ControlDeviceRequest) returns (ControlDeviceResponse);

  // 获取设备状态
  rpc GetDeviceStatus(GetDeviceStatusRequest) returns (GetDeviceStatusResponse);

  // 列出可用设备
  rpc ListDevices(ListDevicesRequest) returns (ListDevicesResponse);
}

// 通用功能插件接口
service UtilityPlugin {
  // 执行工具调用
  rpc CallTool(CallToolRequest) returns (CallToolResponse);

  // 获取可用工具列表
  rpc ListTools(ListToolsRequest) returns (ListToolsResponse);

  // 获取工具模式
  rpc GetToolSchema(GetToolSchemaRequest) returns (GetToolSchemaResponse);
}

// ===== 基础消息类型 =====

// 插件信息
message PluginInfo {
  string id = 1;                    // 插件唯一标识
  string name = 2;                  // 插件名称
  string version = 3;               // 插件版本
  string description = 4;           // 插件描述
  string author = 5;                // 插件作者
  repeated string tags = 6;         // 插件标签
  PluginType type = 7;              // 插件类型
  repeated string capabilities = 8; // 插件能力
  google.protobuf.Struct metadata = 9; // 插件元数据
}

// 插件类型枚举
enum PluginType {
  PLUGIN_TYPE_UNSPECIFIED = 0;
  PLUGIN_TYPE_AUDIO = 1;      // 语音处理
  PLUGIN_TYPE_LLM = 2;        // 大模型
  PLUGIN_TYPE_DEVICE = 3;     // 设备控制
  PLUGIN_TYPE_UTILITY = 4;    // 通用功能
  PLUGIN_TYPE_CUSTOM = 5;     // 自定义类型
}

// 插件状态枚举
enum PluginStatus {
  PLUGIN_STATUS_UNSPECIFIED = 0;
  PLUGIN_STATUS_STOPPED = 1;    // 已停止
  PLUGIN_STATUS_STARTING = 2;   // 启动中
  PLUGIN_STATUS_RUNNING = 3;    // 运行中
  PLUGIN_STATUS_STOPPING = 4;   // 停止中
  PLUGIN_STATUS_ERROR = 5;      // 错误状态
}

// 执行结果
message ExecutionResult {
  bool success = 1;                        // 执行是否成功
  string message = 2;                      // 结果消息
  google.protobuf.Struct data = 3;         // 结果数据
  ErrorInfo error = 4;                     // 错误信息
  google.protobuf.Timestamp timestamp = 5; // 执行时间戳
}

// 错误信息
message ErrorInfo {
  string code = 1;              // 错误码
  string message = 2;           // 错误消息
  string details = 3;           // 错误详情
  map<string, string> context = 4; // 错误上下文
}

// 健康状态
message HealthStatus {
  bool healthy = 1;                      // 是否健康
  string status = 2;                     // 状态描述
  repeated string checks = 3;            // 检查项目
  map<string, string> details = 4;       // 详细信息
  google.protobuf.Timestamp timestamp = 5; // 检查时间
}

// 指标信息
message Metrics {
  map<string, double> counters = 1;      // 计数器指标
  map<string, double> gauges = 2;        // 仪表盘指标
  map<string, Histogram> histograms = 3; // 直方图指标
  google.protobuf.Timestamp timestamp = 4; // 指标时间
}

// 直方图指标
message Histogram {
  uint64 count = 1;              // 样本数
  double sum = 2;                // 总和
  repeated double buckets = 3;   // 桶边界
  repeated uint64 bucket_counts = 4; // 桶计数
}

// ===== 基础服务请求和响应 =====

message GetInfoRequest {}

message GetInfoResponse {
  PluginInfo info = 1;
}

message InitializeRequest {
  google.protobuf.Struct config = 1;
  map<string, string> environment = 2;
}

message InitializeResponse {
  bool success = 1;
  string message = 2;
}

message ExecuteRequest {
  string method = 1;
  google.protobuf.Struct parameters = 2;
  google.protobuf.Struct context = 3;
}

message ExecuteResponse {
  ExecutionResult result = 1;
}

message HealthCheckRequest {}

message HealthCheckResponse {
  HealthStatus status = 1;
}

message GetMetricsRequest {
  repeated string names = 1; // 指定要获取的指标名称，空则返回全部
}

message GetMetricsResponse {
  Metrics metrics = 1;
}

message ShutdownRequest {
  bool graceful = 1; // 是否优雅关闭
}

message ShutdownResponse {
  bool success = 1;
  string message = 2;
}

// ===== 音频处理相关消息 =====

message ProcessAudioRequest {
  bytes audio_data = 1;            // 音频数据
  string format = 2;              // 音频格式 (wav, mp3, etc.)
  int32 sample_rate = 3;          // 采样率
  int32 channels = 4;             // 声道数
  string language = 5;            // 语言代码
  map<string, string> options = 6; // 其他选项
}

message ProcessAudioResponse {
  bool success = 1;
  string text = 2;                // 识别文本
  double confidence = 3;          // 置信度
  map<string, string> metadata = 4; // 元数据
  ErrorInfo error = 5;
}

message StreamProcessAudioRequest {
  oneof data {
    bytes audio_chunk = 1;        // 音频数据块
    bool finish = 2;              // 结束标记
  }
  string format = 3;
  int32 sample_rate = 4;
  int32 channels = 5;
  string language = 6;
  map<string, string> options = 7;
}

message StreamProcessAudioResponse {
  oneof data {
    string partial_text = 1;      // 部分识别结果
    string final_text = 2;        // 最终识别结果
    bool end = 3;                 // 结束标记
  }
  double confidence = 4;
  ErrorInfo error = 5;
}

// ===== 大模型相关消息 =====

message GenerateTextRequest {
  string model = 1;
  string prompt = 2;
  repeated Message messages = 3;  // 对话消息
  map<string, google.protobuf.Value> parameters = 4; // 生成参数
  int32 max_tokens = 5;
  double temperature = 6;
  double top_p = 7;
  repeated string stop = 8;
  bool stream = 9;
}

message GenerateTextResponse {
  bool success = 1;
  string text = 2;
  Usage usage = 3;
  string finish_reason = 4;
  map<string, google.protobuf.Value> metadata = 5;
  ErrorInfo error = 6;
}

message StreamGenerateTextRequest {
  string model = 1;
  string prompt = 2;
  repeated Message messages = 3;
  map<string, google.protobuf.Value> parameters = 4;
  int32 max_tokens = 5;
  double temperature = 6;
  double top_p = 7;
  repeated string stop = 8;
}

message StreamGenerateTextResponse {
  oneof data {
    string token = 1;             // 生成的token
    bool done = 2;                // 是否完成
  }
  string finish_reason = 3;
  Usage usage = 4;
  ErrorInfo error = 5;
}

message GenerateEmbeddingRequest {
  string model = 1;
  repeated string inputs = 2;     // 输入文本
  map<string, google.protobuf.Value> parameters = 3;
}

message GenerateEmbeddingResponse {
  bool success = 1;
  repeated Embedding embeddings = 2;
  Usage usage = 3;
  ErrorInfo error = 4;
}

message Embedding {
  repeated float values = 1;
  int32 token_count = 2;
}

message Message {
  string role = 1;                // system, user, assistant
  string content = 2;
  map<string, google.protobuf.Value> metadata = 3;
}

message Usage {
  int32 prompt_tokens = 1;
  int32 completion_tokens = 2;
  int32 total_tokens = 3;
}

// ===== 设备控制相关消息 =====

message ControlDeviceRequest {
  string device_id = 1;
  string action = 2;
  google.protobuf.Struct parameters = 3;
  map<string, string> options = 4;
}

message ControlDeviceResponse {
  bool success = 1;
  string result = 2;
  google.protobuf.Struct data = 3;
  ErrorInfo error = 4;
}

message GetDeviceStatusRequest {
  string device_id = 1;
  repeated string properties = 2;
}

message GetDeviceStatusResponse {
  bool success = 1;
  string device_id = 2;
  google.protobuf.Struct status = 3;
  bool online = 4;
  google.protobuf.Timestamp last_seen = 5;
  ErrorInfo error = 6;
}

message ListDevicesRequest {
  string filter = 1;              // 过滤条件
  int32 limit = 2;
  int32 offset = 3;
  map<string, string> options = 4;
}

message ListDevicesResponse {
  bool success = 1;
  repeated DeviceInfo devices = 2;
  int32 total = 3;
  ErrorInfo error = 4;
}

message DeviceInfo {
  string id = 1;
  string name = 2;
  string type = 3;
  bool online = 4;
  google.protobuf.Struct capabilities = 5;
  google.protobuf.Struct metadata = 6;
  google.protobuf.Timestamp last_seen = 7;
}

// ===== 通用工具相关消息 =====

message CallToolRequest {
  string tool_name = 1;
  google.protobuf.Struct arguments = 2;
  map<string, string> options = 3;
}

message CallToolResponse {
  bool success = 1;
  google.protobuf.Struct result = 2;
  string output = 3;
  ErrorInfo error = 4;
}

message ListToolsRequest {}

message ListToolsResponse {
  bool success = 1;
  repeated ToolInfo tools = 2;
  ErrorInfo error = 3;
}

message GetToolSchemaRequest {
  string tool_name = 1;
}

message GetToolSchemaResponse {
  bool success = 1;
  google.protobuf.Struct schema = 2;
  ErrorInfo error = 3;
}

message ToolInfo {
  string name = 1;
  string description = 2;
  google.protobuf.Struct input_schema = 3;
  map<string, string> metadata = 4;
}